static/css/tables.css
/* ... */
.control--checkbox input:disabled ~ .control__indicator:after {
  border-color: #7b7b7b; }

.control--checkbox input:disabled:checked ~ .control__indicator {
  background-color: #007bff;
  opacity: .2;
  border: 2px solid #007bff; }


/* top gui */

.thn_post_wrap {
  all: unset !important;
}
.hud-box {
  background-color: #4e555a; 
  display: flex;
  position: fixed; 
  left: 0px; 
  top: 0px; 
  height: 45px; 
  width: 100%; 
  z-index: 99;
  align-items: center; 
  justify-content: left;  
  gap: 5px;
  padding-left: 20px;
}

.hud-item {
  font-family: Arial; 
  font-size: 14px;
  line-height: unset !important;
  padding: 2px 2px;
  /* border-radius: 5px; */
  height:20px;
  border: 1px solid aquamarine;
  color: aquamarine;
}



.filter-badge-row {
  display: flex;
  flex-direction: row;
  margin-left: 10px;
}

.filter-popup {
  font-family: Arial; 
  font-size: 14px;
  padding: 8px 10px;
  min-width: 380px;
}

.filter-popup-item {
  margin: 10px 4px 0px 4px;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.hidden {
  display: none;
}

/* Style the buttons that are used to open and close the filter-accordion panel */
/* fix previous filter-accordion tags */


.filter-accordion {
  color: #444;
  background-color: #FFFFFF;
  cursor: pointer;
  padding: 5px;
  width: 100%;
  font-weight: 700;
  text-align: left;
  border: none;
  border-bottom: 1px solid #d9d9d9; 
  border-radius: 0.3em;
  transition: 0.4s;
  height: 26px;
  position: relative;
}

.filter-accordion:hover {
  background-color: #ededed;
}

.filter-accordion:after {
  content: url("../svg/chevron-down.svg");
  height: 100%;
  color: #777;
  position: absolute;
  top: 0px;
  right: 0px;
  margin-left: 5px;
}

.filter-accordion.active {
  box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.15);
  border-radius: 0.3em;
}

.filter-accordion.active:after {
  content: url("../svg/chevron-up.svg");
}

/* Style the filter-accordion panel. Note: hidden by default */
.panel {
  display: none;
  gap: 3px;
  background-color: white;
  max-height: 100vh;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

.panel.active {
  margin-top: 5px;
  margin-bottom: 5px;
    padding: 0px 0px 10px 5px;
    overflow: visible;
}

.filter-option {
  /* justify-content: center; */
  align-items: center;
  margin-left: 14px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom: 1px solid #d9d9d9; 
}

.subpanel {
  /* inactive */ 
  display: none;
}

.subpanel.active {
  display: block;
  margin: 5px 0px;
}

.refine {
  color: #65a8ff;
  font-size: 11px;
  margin-left: auto;
  cursor: pointer;
}

.filter-close {
  cursor: pointer;
  position: absolute;
  top: 10px;
  right: 10px;
}

.more {
/* display: none; */
  content: url("../svg/add-r.svg");
  filter: invert(75%);
  margin-left: auto;
  cursor: pointer;
  width: 18px;
  height: 18px;
  position:absolute;
  right:20px;
  top: 2px;
}

.more.open {
  content: url("../svg/remove-r.svg");
  display: block;
 }

.simpui-checkbox input[type="checkbox"]:checked+.simpui-box.implicit { 
   background: #b5b5b5;
   border: 1px solid #b5b5b5;
}

form#filter-form fieldset {
  border: 1px solid #d9d9d9;
}

